[package]
name = "day-11-modules"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.7"

[[bin]]
name = "nested-submodules"
test = false
bench = false
path = "src/nested-submodules.rs"
