[package]
name = "day-5-borrowing"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "borrow"
path = "./src/borrow.rs"

[[bin]]
name = "mutable-borrow"
path = "./src/mutable-borrow.rs"
