[package]
name = "day-5-let-vs-const"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "reassigning"
path = "./src/reassigning.rs"

[[bin]]
name = "reassigning-wrong-type"
path = "./src/reassigning-wrong-type.rs"

[[bin]]
name = "reassigning-rebind"
path = "./src/reassigning-rebind.rs"
